--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "bad-words": "^4.0.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
