--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.19.1",
     "bad-words": "^4.0.0",
     "next": "14.2.8",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "validator": "^13.12.0",
