--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.19.1",
+    "@types/bcrypt": "^5.0.2",
     "bad-words": "^4.0.0",
+    "bcrypt": "^5.1.1",
+    "iron-session": "^8.0.3",
     "next": "14.2.8",
     "prisma": "^5.19.1",
     "react": "^18",
