--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
