--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "bad-words": "^4.0.0",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.3",
-    "next": "14.2.8",
+    "next": "14.2.13",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "twilio": "^5.3.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
