--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:infisical": "infisical run --env=dev --path=/apps/firefly -- npm run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.20.0",
     "@types/bcrypt": "^5.0.2",
     "bad-words": "^4.0.0",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.3",
     "next": "14.2.13",
-    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -33,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
