--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.20.0",
     "@types/bcrypt": "^5.0.2",
     "bad-words": "^4.0.0",
@@ -25,6 +26,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "twilio": "^5.3.1",
     "validator": "^13.12.0",
